@@ -2,6 +2,6 @@
 <BODY>
 Integration with Jetty 5.1. Jetty 5 is a popular and stable HTTP server.
 @since 1.0
-@see <a href="http://jetty.mortbay.org/">Jetty HTTP server</a>
+@see <a href="http://jetty.mortbay.org/jetty5/">Jetty HTTP server</a>
 </BODY>
 </HTML>
